--- a/Implementation_of_a_PID_Controller.ipynb
+++ b/Implementation_of_a_PID_Controller.ipynb
@@ -50,9 +50,18 @@
    "id": "2d4d6faf-d092-4f1a-81cd-bd419a8d94f7",
    "metadata": {},
    "source": [
-    "The Storage Device in this Model is filled with PCM which melts at a melting Temperature @58°C. More of the behavior of this Phase Change Material can be seen in {ref}'pcm_melting_project-ref'. The PCM cell is melted with hot water that flows on the top surface of the cell. Therefore heat is transfered with convection from the water to the PCM. \n",
+    "The Storage Device in this Model is filled with PCM which melts at a melting Temperature @58°C. More of the behavior of this Phase Change Material can be seen in {ref}'pcm_melting_project-ref'. The PCM cell is melted with hot water that flows on the top surface of the cell. Therefore heat is transfered with convection from the water to the PCM. To make sure that the inlet Temperature is the same in the whole charging process of the PCM cell a PID-Controller is implemented. This controller enables energy recovery in the melting process as well. Therefore hot water from the output can be recycled. There is a mixing valve implemented in the control cycle and a disturbance as well. \n",
     "\n",
-    "![20230414_120724401_iOS.png](attachment:796d0738-2dd3-475d-9fa4-86c71c82e881.png)\n"
+    "The Equations of enthalpy in the mixing valve are the following: \n",
+    "    \n",
+    "$$ \\dot{H}_{mix} = \\dot{H_1} + \\dot{H_2}$$\n",
+    "\n",
+    "where: \n",
+    "\n",
+    "$$ \\dot{H}_1 = (1-\\alpha) \\cdot \\dot{m}_{mix} \\cdot T_1$$\n",
+    "$$ \\dot{H}_2 = (\\alpha) \\cdot \\dot{m}_{mix} \\cdot T_{2b}$$\n",
+    "![20230414_120724401_iOS.png](attachment:796d0738-2dd3-475d-9fa4-86c71c82e881.png)\n",
+    "> Figure: Scheme of the Physical Model with the Controller, which is implemented to control the mixing valve and a disturbance which influences the Temperature $T_{2b}$ that flows into the mixing valve."
    ]
   },
   {
