PID controller theory first paragraph

--- a/Implementation_of_a_PID_Controller.ipynb
+++ b/Implementation_of_a_PID_Controller.ipynb
@@ -111,6 +111,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fc528ad2-4f29-4f59-a0aa-a185d3e3640f",
+   "metadata": {},
+   "source": [
+    "A Proportional-Integral-Derivative (PID) controller allows, to adjust (control) a measured physical quantity (also acalled process variable $PV$) in a system. This is done by manipulating a control element such as a valve (also called manipulated variable $MV$). The PID controller creates a closed feedback loop. The obtained measurement $PV$ is continuously compared to a defined set point $SP$ which gives the control error $err = SP - PV$. The PID controller equation operates on this control error."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d44b8ee-6a80-4296-870c-b6c230e11b76",
    "metadata": {},
    "source": [
