final_version_implementation_of_a_pid_controller

--- a/Implementation_of_a_PID_Controller.ipynb
+++ b/Implementation_of_a_PID_Controller.ipynb
@@ -70,28 +70,33 @@
    "metadata": {},
    "source": [
     "## Symbols\n",
+    "Here is a overview of all used Symbols in this project. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "204dc73a-b1d1-4ee2-aae7-91f8532eef07",
+   "metadata": {},
+   "source": [
     "| Quantity | Symbol |\n",
     "| --- | --- |\n",
     "| Enthalpy at the Inlet 1 of the mixing Valve | $\\dot{H}_1$ |\n",
     "| Enthalpy at the Inlet 2 of the mixing Valve | $\\dot{H}_2$ |\n",
-    "| Enthalpy at the Outlet of the mixing Valve | $\\dot{H}_{mix}$ |\n",
-    "| Enthalpy at the Outlet of the PCM cell | $\\dot{H}_{out}$ |\n",
-    "| Enthalpy that is not reused | $\\dot{H}_{waste}$ |\n",
-    "| Enthalpy that is recycled | $\\dot{H}_{reused}$ |\n",
-    "| Disturbance | $\\dot{Q}_{dist}$ |\n",
+    "| Enthalpy at the Outlet of the mixing Valve | $\\dot{H}_{\\text{mix}}$ |\n",
+    "| Enthalpy at the Outlet of the PCM cell | $\\dot{H}_{\\text{out}}$ |\n",
+    "| Enthalpy that is not reused | $\\dot{H}_{\\text{waste}}$ |\n",
+    "| Enthalpy that is recycled | $\\dot{H}_{\\text{reused}}$ |\n",
+    "| Disturbance | $\\dot{Q}_{\\text{dist}}$ |\n",
     "| Temperature at the Inlet 1 of the mixing Valve | $T_1$ |\n",
     "| Temperature at the Inlet 2 of the mixing Valve | $T_{2B}$ |\n",
-    "| Temperature at the Outlet of the mixing Valve | $T_{mix}$ |\n",
-    "| Temperature at the Outlet of the PCM Cell | $T_{out}$ |\n",
+    "| Temperature at the Outlet of the mixing Valve | $T_{\\text{mix}}$ |\n",
+    "| Temperature at the Outlet of the PCM Cell | $T_{\\text{out}}$ |\n",
     "| Temperature at the Outlet of the PCM Cell | $T_{2A}$ |\n",
     "| Valve Position | $\\alpha$ |\n",
     "| Setpoint of the PID-Controller | SP |\n",
     "| Measured Point of the PID-Controller | PV |\n",
-    "| Output Signal of the PID-Controller | MV |\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "| Output Signal of the PID-Controller | MV |\n"
    ]
   },
   {
@@ -201,7 +206,7 @@
     "> Example of a Stepinput as a Disturbance\n",
     "\n",
     "![T_dist_sininput.png](attachment:000f425b-9fe6-4edc-94d2-454d38481b13.png)\n",
-    "> Example as a Sinus Input as a Disturbance"
+    "> Example of a Sinus Input as a Disturbance"
    ]
   },
   {
@@ -681,18 +686,12 @@
    "id": "9df5a482-b529-4b3c-a829-d13e4a8800a9",
    "metadata": {},
    "source": [
-    "The first graph you can see in this evaluation shows how the PID-Controller reacts in different situations. It can be seen in this graph that the parameters for the controller are not optimal because there is a constant offset between the PV (controlled signal) and the SP (setpoint). This offset is caused by the K_p Parameter. It can also be seen, that the K_i Parameter is not well euther because the valve is swiching all the time. \n",
+    "The evaluation includes a graph illustrating the response of the PID controller in various scenarios. The graph reveals suboptimal controller parameters, as evidenced by a consistent offset between the controlled signal (PV) and the setpoint (SP). This offset is attributed to the K_p parameter. Additionally, the K_i parameter is inadequate, leading to frequent valve switching.\n",
     "\n",
-    "The cell needs arount 25 hours to be fully charged. WHat is interesting in the plot of the Temepratures in the pcm-cell itself is the behavior of the temperatures in the bottom layor of the cells. The first layer of the pcm-cell is charged after less than 5 hours whereas the bottom layer is charged after more than 20 hours. This phenomena can be explained to the fact that in the pcm cell itself only conduction is considered in the calculation of the heat transfer. But in reality also convection is of great importance when chanrging a pcm cell. To investigate the phenomena of convection in the cell a new and more accurate model has to be implemented and evaluated. \n",
+    "The complete charging of the cell takes approximately 25 hours. Notably, the temperature behavior in the bottom layer of the PCM cell is of interest. While the first layer achieves full charge in under 5 hours, the bottom layer requires over 20 hours. This phenomenon can be explained by considering that the heat transfer calculation within the PCM cell only considers conduction, whereas convection also plays a significant role in reality. To investigate convection within the cell, a more accurate model must be implemented and evaluated.\n",
     "\n",
-    "But overall the results show that the PID Controller is working to keep the inlet temperature to charge the pcm cell more or less constant but not in an optimal way.   "
+    "In summary, the results indicate that the PID controller adequately maintains a relatively constant inlet temperature during PCM cell charging, but not optimally."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6dac75ce-b0d7-4428-9dca-f7c8f73810d3",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -803,7 +802,19 @@
    "metadata": {},
    "source": [
     "# Conclusion\n",
-    "The main goal "
+    "In this study, a PID controller was implemented and evaluated for its effectiveness in controlling the temperature at the water inlet of a PCM storage device. The goal was to maintain a constant temperature at the outlet of the mixing valve, even when there are variations in the temperature at the inputs.\n",
+    "\n",
+    "The PID controller showed promise in maintaining the desired temperature range for the water inlet. However, the performance of the controller heavily depended on the chosen parameters. The proportional gain (Kp) and integral gain (Ki) were found to significantly impact the controller's behavior.\n",
+    "\n",
+    "When the proportional gain was set to zero, the controller relied solely on the integral gain, resulting in oscillations and a slow response to control errors. On the other hand, higher proportional gains improved the controller's ability to reach the setpoint quickly, but they also introduced overshoot and instability in some cases.\n",
+    "\n",
+    "The integral gain played a crucial role in eliminating steady-state errors and compensating for disturbances. However, if the integral gain was set too high, it could lead to overshoot and oscillations.\n",
+    "\n",
+    "To achieve optimal performance, an adaptive PID control approach, where the controller parameters are adjusted dynamically based on the system's behavior, could be explored. This adaptive approach would enable the PID controller to adapt to changes in the system properties, such as the PCM cells approaching full charge.\n",
+    "\n",
+    "It is worth noting that the current model considered only conduction and neglected the effects of convection within the PCM storage device. To capture the full behavior of the system and improve the accuracy of the PID controller, a more comprehensive model that incorporates convection should be developed.\n",
+    "\n",
+    "In conclusion, the PID controller showed potential for maintaining the desired temperature at the water inlet of a PCM storage device. However, careful tuning of the controller parameters and further refinement of the system model are necessary to optimize its performance and ensure stability and efficiency in real-world applications"
    ]
   },
   {
@@ -816,16 +827,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b740a9f-5688-4740-9ba7-a7d3f4a2b9f4",
+   "id": "74ddd00c-8621-4728-8c08-88c2394e958d",
    "metadata": {},
    "source": [
-    "---> Selina"
+    "The melting of Phase Change Materials (PCMs) with the aid of PID controllers presents several exciting opportunities and challenges. Here are some potential outlooks for the utilization of PID controllers in PCM melting applications:\n",
+    "\n",
+    "__Enhanced Temperature Control:__ PID controllers offer precise and accurate temperature control, making them well-suited for PCM melting processes. The outlook for utilizing PID controllers in PCM melting is promising, as they can help maintain the desired melting temperature with minimal overshoot or deviation. This level of control is crucial for optimizing the energy storage/release capabilities of PCMs and ensuring efficient operation.\n",
+    "\n",
+    "__Energy Efficiency:__ PCM melting processes have the potential to improve energy efficiency in various applications, such as thermal energy storage systems or building heating/cooling systems. The outlook for utilizing PID controllers lies in their ability to regulate the melting process and control the energy flow within the system. By effectively managing the energy input and output, PID controllers can contribute to maximizing the overall energy efficiency of PCM-based systems.\n",
+    "\n",
+    "__ Adaptive Control Strategies: The development of adaptive control strategies for PID controllers in PCM melting applications holds promise. These strategies involve dynamically adjusting the controller parameters to adapt to changing system conditions, such as varying PCM properties or environmental factors. An adaptive PID controller can optimize the melting process by continuously adapting to the specific characteristics of the PCM, leading to improved performance and energy utilization.\n",
+    "\n",
+    "Integration with Real-Time Monitoring: The integration of PID controllers with real-time monitoring and feedback systems can enhance the melting process control for PCMs. By incorporating sensors and data acquisition systems, the controller can receive continuous information about the PCM's temperature and status. This integration enables the PID controller to make informed decisions and adjustments, ensuring efficient and reliable PCM melting.\n",
+    "\n",
+    "Optimization of PCM Composition and Design: The outlook for PCM melting with PID controllers also includes advancements in PCM composition and design. Researchers are exploring innovative PCM materials with desirable phase change properties and improved thermal conductivity. PID controllers can play a crucial role in optimizing the melting process for these advanced PCMs by tailoring the control parameters to match their specific characteristics.\n",
+    "\n",
+    "Scalability and Industrial Applications: While much of the research on PCM melting with PID controllers has focused on laboratory-scale experiments and small-scale applications, there is potential for scalability and broader industrial implementation. The outlook includes adapting and optimizing PID control strategies for large-scale PCM systems, such as those used in commercial energy storage or industrial processes, to harness the benefits of PCM melting on a larger scale.\n",
+    "\n",
+    "In summary, the outlook for utilizing PID controllers in PCM melting applications is characterized by improved temperature control, enhanced energy efficiency, and the integration of adaptive control strategies and real-time monitoring. As research and development in PCM technology continue to advance, PID controllers are expected to play a significant role in optimizing the melting process and enabling the widespread adoption of PCM-based solutions in various industrial and energy-related applications."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75592a05-633c-473b-a92c-844b06ebf015",
+   "id": "162d32f7-3cb0-49e3-9a31-054acbdb9d04",
    "metadata": {},
    "outputs": [],
    "source": []
