--- a/Implementation_of_a_PID_Controller.ipynb
+++ b/Implementation_of_a_PID_Controller.ipynb
@@ -13,7 +13,7 @@
    "id": "1ef1651b-b149-474d-8061-90aec232258f",
    "metadata": {},
    "source": [
-    "# Introduction"
+    "## Introduction"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "id": "058aad7d-2e19-4704-a559-6698b9a0537e",
    "metadata": {},
    "source": [
-    "# Problem Definition"
+    "## Problem Definition"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "id": "e8047b06-4768-494d-9831-9069f0d60a89",
    "metadata": {},
    "source": [
-    "## Symbols\n",
+    "### Symbols\n",
     "Here is a overview of all used Symbols in this project. \n",
     "\n"
    ]
@@ -104,7 +104,7 @@
    "id": "fa276ce5-0883-4436-a830-136b3598c8e5",
    "metadata": {},
    "source": [
-    "# Physical Model"
+    "## Physical Model"
    ]
   },
   {
@@ -117,10 +117,10 @@
    "id": "2d4d6faf-d092-4f1a-81cd-bd419a8d94f7",
    "metadata": {},
    "source": [
-    "## Description of the Storage Device\n",
+    "### Description of the Storage Device\n",
     "The Storage Device in this Model is filled with PCM which melts at a melting temperature  of 58°C. More of the behavior of this Phase Change Material can be seen in [the Project PCM Melting](pcm_melting_project.ipynb). The PCM cell is melted with hot water that flows on the top surface of the cell. Therefore heat is transfered with convection from the water to the PCM. To make sure that the inlet Temperature stays constant in the whole charging process of the PCM cell a PID-Controller is implemented. This controller enables energy recovery in the melting process as well. Therefore hot water from the output can be recycled. There is a mixing valve implemented in the control cycle and a disturbance as well. \n",
     "\n",
-    "## Boundary Conditions\n",
+    "### Boundary Conditions\n",
     "As boundary conditions the inlet Temperature of $T_1$ is set to 85°C and the mass flow into the PCM cell $\\dot{m}_{mix}$ is set to 10 m/s. These conditions are the same than in the report [the Project PCM Melting](pcm_melting_project.ipynb). The Setpoint of the controller is set to 75°C.\n",
     "\n",
     "\n",
@@ -129,7 +129,7 @@
     "$$ \\dot{m}_{mix} = const. $$\n",
     "$$ SP = const. $$\n",
     "\n",
-    "## Mathematical Correlations in the System\n",
+    "### Mathematical Correlations in the System\n",
     "The figure shows where which enthalpy, temperature and mass flow can be found in the model. The mathematical correlations can be found in the energy balances of the system. \n",
     "\n",
     "The Equations of enthalpy in the system are the following: \n",
@@ -157,7 +157,7 @@
     "tags": []
    },
    "source": [
-    "## Mixing Valve and PID Controller"
+    "### Mixing Valve and PID Controller"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "id": "c88000d9-d534-427c-bf8f-6328188f5256",
    "metadata": {},
    "source": [
-    "## Disturbance\n",
+    "### Disturbance\n",
     "\n",
     "Two different disturbance signals are implemented in this project. One disturbance examines how the whole system reacts if a step input is given as a disturbance. The other disturbance signal is a sinus function that is injected into the system. The disturbance in this project should simulate different demands of heating in a room. Therefore the outlet temperature during the charging process of the PCM cell can be used to heat up a room. \n",
     "\n",
@@ -214,7 +214,7 @@
    "id": "2a01d7df-063a-426c-bcbf-ae161419dc21",
    "metadata": {},
    "source": [
-    "# PID Controller Theory"
+    "## PID Controller Theory"
    ]
   },
   {
@@ -253,7 +253,7 @@
     "tags": []
    },
    "source": [
-    "## Principle of the Controller"
+    "### Principle of the Controller"
    ]
   },
   {
@@ -277,7 +277,7 @@
    "id": "7d44b8ee-6a80-4296-870c-b6c230e11b76",
    "metadata": {},
    "source": [
-    "## Equations\n",
+    "### Equations\n",
     "\n",
     "The following equation represents the behavior of a PID controller:\n",
     "\n",
@@ -307,7 +307,7 @@
    "id": "d3aba268-1f86-47e6-8fd8-6c39698696ac",
    "metadata": {},
    "source": [
-    "# Initial System Behavior\n",
+    "## Initial System Behavior\n",
     "\n",
     "To verify that the whole system is working fixed parameters are implemented for the PID-controller. In the next chapter \"Parameterstudy\" these values are changed to investigate how the parameters influence the behavior of the controller. In the initial behavior the $K_p$ Parameter is set to 0.1 and the $K_i$ Parameter is set to 0.0001. The initital behavior of the system is evaluated with a stepinput as a disturbance.  The code that was implemented is shown here as well."
    ]
@@ -706,7 +706,7 @@
    "id": "cf41edda-e406-407c-9b16-dd298db53771",
    "metadata": {},
    "source": [
-    "# Parameterstudy\n",
+    "## Parameterstudy\n",
     "\n",
     "In the following sections, the behavior of the PID controller is analyzed for different values of $K_P$ and $K_I$. The analysis of the system behavior is based on plots of the measured process variable $PV$ and the manipulated variable $MV$ that corresponds to the valve position $\\alpha$."
    ]
@@ -733,7 +733,7 @@
    "id": "ce7ce740-9f7a-4872-a2ab-86b1c0ebd4de",
    "metadata": {},
    "source": [
-    "## Variation of the Proportional Control Gain\n",
+    "### Variation of the Proportional Control Gain\n",
     "\n",
     "Here the K_p parameter is changed from 0 to 0.4. Different phenomena were observed and are described in this chapter. \n",
     "\n",
@@ -781,7 +781,7 @@
    "id": "e280fce3-d437-4b89-841b-47b8020dd782",
    "metadata": {},
    "source": [
-    "## Variation of the Integral Control Gain\n",
+    "### Variation of the Integral Control Gain\n",
     "![Controller_behavior_Ki_0.png](attachment:27688df9-0dd0-4447-92b2-2dc0e9257dc5.png)\n",
     "> Behavior of the controller with Ki = 0 and Kp = 0.1\n",
     "\n",
@@ -801,7 +801,7 @@
    "id": "34c0b99f-6eb8-443d-bb4f-9e9e2dd44af6",
    "metadata": {},
    "source": [
-    "# Conclusion\n",
+    "## Conclusion\n",
     "In this study, a PID controller was implemented and evaluated for its effectiveness in controlling the temperature at the water inlet of a PCM storage device. The goal was to maintain a constant temperature at the outlet of the mixing valve, even when there are variations in the temperature at the inputs.\n",
     "\n",
     "The PID controller showed promise in maintaining the desired temperature range for the water inlet. However, the performance of the controller heavily depended on the chosen parameters. The proportional gain (Kp) and integral gain (Ki) were found to significantly impact the controller's behavior.\n",
@@ -822,7 +822,7 @@
    "id": "8c5c873c-2558-4b16-a2d3-9974b6626470",
    "metadata": {},
    "source": [
-    "# Outlook"
+    "## Outlook"
    ]
   },
   {
@@ -836,24 +836,16 @@
     "\n",
     "__Energy Efficiency:__ PCM melting processes have the potential to improve energy efficiency in various applications, such as thermal energy storage systems or building heating/cooling systems. The outlook for utilizing PID controllers lies in their ability to regulate the melting process and control the energy flow within the system. By effectively managing the energy input and output, PID controllers can contribute to maximizing the overall energy efficiency of PCM-based systems.\n",
     "\n",
-    "__ Adaptive Control Strategies: The development of adaptive control strategies for PID controllers in PCM melting applications holds promise. These strategies involve dynamically adjusting the controller parameters to adapt to changing system conditions, such as varying PCM properties or environmental factors. An adaptive PID controller can optimize the melting process by continuously adapting to the specific characteristics of the PCM, leading to improved performance and energy utilization.\n",
+    "__Adaptive Control Strategies:__ The development of adaptive control strategies for PID controllers in PCM melting applications holds promise. These strategies involve dynamically adjusting the controller parameters to adapt to changing system conditions, such as varying PCM properties or environmental factors. An adaptive PID controller can optimize the melting process by continuously adapting to the specific characteristics of the PCM, leading to improved performance and energy utilization.\n",
     "\n",
-    "Integration with Real-Time Monitoring: The integration of PID controllers with real-time monitoring and feedback systems can enhance the melting process control for PCMs. By incorporating sensors and data acquisition systems, the controller can receive continuous information about the PCM's temperature and status. This integration enables the PID controller to make informed decisions and adjustments, ensuring efficient and reliable PCM melting.\n",
+    "__Integration with Real-Time Monitoring:__ The integration of PID controllers with real-time monitoring and feedback systems can enhance the melting process control for PCMs. By incorporating sensors and data acquisition systems, the controller can receive continuous information about the PCM's temperature and status. This integration enables the PID controller to make informed decisions and adjustments, ensuring efficient and reliable PCM melting.\n",
     "\n",
-    "Optimization of PCM Composition and Design: The outlook for PCM melting with PID controllers also includes advancements in PCM composition and design. Researchers are exploring innovative PCM materials with desirable phase change properties and improved thermal conductivity. PID controllers can play a crucial role in optimizing the melting process for these advanced PCMs by tailoring the control parameters to match their specific characteristics.\n",
+    "__Optimization of PCM Composition and Design:__ The outlook for PCM melting with PID controllers also includes advancements in PCM composition and design. Researchers are exploring innovative PCM materials with desirable phase change properties and improved thermal conductivity. PID controllers can play a crucial role in optimizing the melting process for these advanced PCMs by tailoring the control parameters to match their specific characteristics.\n",
     "\n",
-    "Scalability and Industrial Applications: While much of the research on PCM melting with PID controllers has focused on laboratory-scale experiments and small-scale applications, there is potential for scalability and broader industrial implementation. The outlook includes adapting and optimizing PID control strategies for large-scale PCM systems, such as those used in commercial energy storage or industrial processes, to harness the benefits of PCM melting on a larger scale.\n",
+    "__Scalability and Industrial Applications:__ While much of the research on PCM melting with PID controllers has focused on laboratory-scale experiments and small-scale applications, there is potential for scalability and broader industrial implementation. The outlook includes adapting and optimizing PID control strategies for large-scale PCM systems, such as those used in commercial energy storage or industrial processes, to harness the benefits of PCM melting on a larger scale.\n",
     "\n",
     "In summary, the outlook for utilizing PID controllers in PCM melting applications is characterized by improved temperature control, enhanced energy efficiency, and the integration of adaptive control strategies and real-time monitoring. As research and development in PCM technology continue to advance, PID controllers are expected to play a significant role in optimizing the melting process and enabling the widespread adoption of PCM-based solutions in various industrial and energy-related applications."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "162d32f7-3cb0-49e3-9a31-054acbdb9d04",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -873,7 +865,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
-  }
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 5
